fixed overflow issue in small screens

--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,10 @@ a:hover {
     padding: 30px 0;
   }
 
+  .options {
+    top: 0px;
+  }
+
   #preCity {
     margin-bottom: 10px;
   }
